src/lock_file/snapshots/pixi__lock_file__satisfiability__tests__failing_satisiability.snap
---
source: src/lock_file/satisfiability.rs
assertion_line: 560
expression: "format!(\"{err:?}\")"
input_file: tests/non-satisfiability/solve-groups-pypi/pixi.toml
---
  × environment 'default' does not satisfy the requirements of the project for
  │ platform 'win-64
  ╰─▶ the requirement 'packaging >=20.0' could not be satisfied (required
      by 'matplotlib')
