src/lock_file/snapshots/pixi__lock_file__satisfiability__tests__failing_satisiability@expected-editable.snap
---
source: src/lock_file/satisfiability.rs
expression: s
---
environment 'default' does not satisfy the requirements of the project for platform 'win-64
    Diagnostic severity: error
    Caused by: expected foo to be editable but in the lock-file it is not
