src/lock_file/snapshots/pixi__lock_file__satisfiability__tests__failing_satisiability@explicit-pypi-dependency.snap
---
source: src/lock_file/satisfiability.rs
expression: s
---
environment 'default' does not satisfy the requirements of the project for platform 'win-64
    Diagnostic severity: error
    Caused by: 'boltons' is locked as a conda package but only requested by pypi dependencies
