src/lock_file/snapshots/pixi__lock_file__satisfiability__tests__failing_satisiability@mismatch-channel-priority2.snap
---
source: src/lock_file/satisfiability.rs
expression: s
---
environment 'default' does not satisfy the requirements of the project
    Diagnostic severity: error
    Caused by: the lock-file was solved with a different channel priority ("disabled") than the one selected ("strict")
