src/lock_file/snapshots/pixi__lock_file__satisfiability__tests__failing_satisiability@mismatch-exclude-newer.snap
---
source: src/lock_file/satisfiability.rs
expression: s
---
environment 'default' does not satisfy the requirements of the project
    Diagnostic severity: error
    Caused by: the lock-file was solved without exclude-newer, but the environment has this option set to 2025-11-04 00:00:00 UTC
