src/lock_file/snapshots/pixi__lock_file__satisfiability__tests__failing_satisiability@mismatch-solve-strategy.snap
---
source: src/lock_file/satisfiability.rs
expression: s
---
environment 'default' does not satisfy the requirements of the project
    Diagnostic severity: error
    Caused by: the lock-file was solved with a different strategy ("lowest-version") than the one selected ("highest")
