src/lock_file/snapshots/pixi__lock_file__satisfiability__tests__failing_satisiability@mismatched-source-spec.snap
---
source: src/lock_file/satisfiability.rs
expression: s
---
environment 'default' does not satisfy the requirements of the project for platform 'win-64
    Diagnostic severity: error
    Caused by: the locked source package 'child-package' does not match the requested source package, the locked source type does not match the requested type
